--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" th:href="@{../assets/plugins/bootstrap/css/bootstrap.min.css}">
     <link rel="stylesheet" href="../assets/plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../assets/css/AdminLTE.css">
+    <!-- Morris chart -->
+    <link rel="stylesheet" href="../assets/css/morris.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="../assets/css/ionicons.min.css">
     <link rel="stylesheet" href="../assets/css/skins/_all-skins.css">
@@ -44,8 +46,8 @@
                         <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">CPU Traffic</span>
-                            <span class="info-box-number">90<small>%</small></span>
+                            <span class="info-box-text">课程</span>
+                            <span class="info-box-number">[[${courses}]] 门</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -57,8 +59,8 @@
                         <span class="info-box-icon bg-red"><i class="fa fa-google-plus"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">Likes</span>
-                            <span class="info-box-number">41,410</span>
+                            <span class="info-box-text">选修数</span>
+                            <span class="info-box-number">[[${elective}]]</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -71,24 +73,11 @@
 
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="info-box">
-                        <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
-
-                        <div class="info-box-content">
-                            <span class="info-box-text">Sales</span>
-                            <span class="info-box-number">760</span>
-                        </div>
-                        <!-- /.info-box-content -->
-                    </div>
-                    <!-- /.info-box -->
-                </div>
-                <!-- /.col -->
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box">
                         <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">New Members</span>
-                            <span class="info-box-number">2,000</span>
+                            <span class="info-box-text">用户</span>
+                            <span class="info-box-number">[[${students}]]</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -97,12 +86,33 @@
                 <!-- /.col -->
             </div>
             <!-- /.row -->
+            <!-- Custom tabs (Charts with tabs)-->
+            <div class="nav-tabs-custom">
+                <!-- Tabs within a box -->
+                <ul class="nav nav-tabs pull-right">
+                    <li class="active"><a href="#revenue-chart" data-toggle="tab">成绩</a></li>
+<!--                    <li><a href="#sales-chart" data-toggle="tab">学分</a></li>-->
+                    <li class="pull-left header"><i class="fa fa-inbox"></i> 统计</li>
+                </ul>
+                <div class="tab-content no-padding">
+                    <!-- Morris chart - Sales -->
+                    <div class="chart tab-pane active" id="revenue-chart" style="position: relative; height: 300px;"></div>
+                    <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;"></div>
+                </div>
+            </div>
+            <!-- /.nav-tabs-custom -->
         </section>
         <!-- /.content -->
     </div>
     <!-- 引入footer -->
     <div th:replace="commons/_footer.html"/>
 </div>
+<script src="../assets/js/jquery-ui.min.js"></script>
+<!-- Morris.js charts -->
+<script src="../assets/js/raphael.min.js"></script>
+<script src="../assets/js/morris.min.js"></script>
+<script src="../assets/js/dashboard.js"></script>
+<script src="../assets/js/demo.js"></script>
 <script>
     var app = new Vue({
         el: '#app',
