--- a/src/main/resources/templates/commons/_footer.html
+++ b/src/main/resources/templates/commons/_footer.html
@@ -12,7 +12,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="../assets/plugins/jquery/jquery.js"></script>
+    <script src="../assets/plugins/jquery/jquery.min.js"></script>
     <script src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/adminlte.js"></script>
     <script src="../assets/plugins/toast/js/jquery.toast.min.js"></script>
