--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -112,7 +112,7 @@
 <script src="../assets/js/raphael.min.js"></script>
 <script src="../assets/js/morris.min.js"></script>
 <script src="../assets/js/dashboard.js"></script>
-<script src="../assets/js/demo.js"></script>
+<!--<script src="../assets/js/demo.js"></script>-->
 <script>
     var app = new Vue({
         el: '#app',
